apparently something (bad) changed in QGraphicsView and now dragMoveEvent gets called repeatedly with the same pos

this made people confused about br#261443 as it was supposed to be fixed (it was) but a different issue entirely
had cropped up in the meantime. *sigh*

BUG:261443